<resources>
    <string name="app_name">SignCoach</string>
    <string name="title_Home">Home</string>
    <string name="title_Learnmode">Learn</string>
    <string name="title_Quizmode">Quiz</string>
    <string name="title_Setting">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Quiz Strings -->
    <string name="Quiz_Level">Level 1</string>
    <string name="quizviewcontent">The image showing the letter</string>

    <!-- Letter Strings -->
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>

    <!-- Quiz page buttons-->
    <string name="C2F">Character To Fingerspell</string>
    <string name="F2C">Fingerspell To Character</string>

    <!-- Quiz c2F page   <-->
    <string name="TopBarTextC2F">Character to Fingerspell Quiz</string>
    <!-- Quiz F2C page-->
    <string name="quizpage">Back</string>
    <string name="TopBarTextF2C">Fingerspell to Character Quiz</string>
    <string name="InstructionF2C">Identify the fingerspell performed by the robot, and enter the corresponding sequence</string>
    <string name="start_button_clicked">You clicked Start!</string>

    <!-- Home Page-->
    <string name="Inputboxhint">Enter a character to check whether we support it!</string>
    <string name="dictionary">Full supported dictionary can be found the setting panel</string>
    <string name="HintTextF2C">Character Sequence</string>
    <string name="learningProgress">Learning Progress</string>
    <string name="QuizProgress">Quiz Challenge Progress</string>


    <!-- Setting Page -->
    <string name="setting1">Check for for Update</string>
    <string name="setting2">Search for Robot</string>
    <string name="setting3">Clear Cache</string>
    <string name="setting4">Terms and Conditions</string>
    <string name="setting5">Contact Us</string>
    <string name="setting6">Clear Progress</string>

<!--    Terms and Conditions-->
    <string name="term">Terms and Conditions</string>
<!--TensorFlow Lite example file-->
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Float</item>
        <item>Quantized</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string name="fingerspell">Show Sign</string>
    <string name="learnInstruction">Click on SHOW SIGN to let the robot show the character or ATTEMPT the character and get it checked!</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>
