<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.SDP.signbits.ui.home.HomeFragment"
        android:label="@string/title_Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.SDP.signbits.ui.learn.LearnFragment"
        android:label="@string/title_Learnmode"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.SDP.signbits.ui.quiz.QuizFragment"
        android:label="@string/title_Quizmode"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.SDP.signbits.ui.setting.SettingFragment"
        android:label="@string/title_Setting"
        tools:layout="@layout/fragment_setting" />
</navigation>