<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quizFingerToChar.QuizFingerToChar">

    <LinearLayout
        android:id="@+id/LinearLayoutTopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/textViewTopBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="@string/TopBarTextF2C"
            android:textColor="#03A9F4"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewInstructionF2C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/InstructionF2C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutTopBar" />

    <LinearLayout
        android:id="@+id/LinearLayoutQuiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="Hint" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextF2C"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/HintTextF2C"
            android:inputType="textCapSentences|textCapCharacters" />

        <LinearLayout
            android:id="@+id/LinearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="Submit" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/ic_launcher_background"
        android:fontFamily="casual"
        android:text="Skip"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="158dp" />

    <ImageButton
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/button"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="304dp" />

</androidx.constraintlayout.widget.ConstraintLayout>